# TL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  package-lock.cmake
CMake/: CPM.cmake  add-target.cmake  dev-mode.cmake  variables.cmake
TL/: CMakeLists.txt
TL-Playground/: CMakeLists.txt
TL-Playground/Source/: Playground.cpp
TL/Include/TL/: Allocator.hpp  Assert.hpp  Block.hpp  Buffer.hpp  Containers.hpp  Flags.hpp  Log.hpp  Memory.hpp  Span.hpp  Stacktrace.hpp  UPtr.hpp  UniquePtr.hpp  Utils.hpp
TL/Include/TL/Allocator/: Allocator.hpp  Arena.hpp  BaseAllocator.hpp  MemPlumber.hpp  Mimalloc.hpp
TL/Include/TL/Compression/: Compression.hpp
TL/Include/TL/FileSystem/: FileSystem.hpp
TL/Include/TL/Serialization/: Base.hpp  Binary.hpp  Binary.inl  Json.hpp  Serialization.hpp  SerializeTraits.hpp
TL/Source/: Allocator.cpp  LeakTracker.inl  Log.cpp  Stacktrace.cpp  mimalloc-override.cpp
TL/Source/Allocator/: Allocator.cpp  Arena.cpp  BaseAllocator.cpp  MemPlumber.cpp  Mimalloc.cpp  mimalloc-override.cpp
TL/Source/Serialization/: Binary.cpp  Serialization.cpp
